# oaipmh-scythe

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  justfile  pyproject.toml  versions.json
.github/: CONTRIBUTING.md  SECURITY.md  cliff.toml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/requirements/: ci.txt
.github/workflows/: codeql.yml  constraints.txt  docs.yml  label.yml  main.yml  pr.yml  pre-commit-autoupdate.yml  publish.yml  scorecards.yml  stale.yml  test.yml  upgrade-requirements.yml
0.14.0/: 404.html  index.html  sitemap.xml
0.14.0/api/client/: index.html
0.14.0/api/exceptions/: index.html
0.14.0/api/iterator/: index.html
0.14.0/api/models/: index.html
0.14.0/api/response/: index.html
0.14.0/api/utils/: index.html
0.14.0/changelog/: index.html
0.14.0/contributing/: index.html
0.14.0/customizing/: index.html
0.14.0/license/: index.html
0.14.0/oaipmh/: index.html
0.14.0/search/: search_index.json
0.14.0/tutorial/: index.html
0.14.1/: 404.html  index.html  sitemap.xml
0.14.1/api/client/: index.html
0.14.1/api/exceptions/: index.html
0.14.1/api/iterator/: index.html
0.14.1/api/models/: index.html
0.14.1/api/response/: index.html
0.14.1/api/utils/: index.html
0.14.1/changelog/: index.html
0.14.1/contributing/: index.html
0.14.1/customizing/: index.html
0.14.1/license/: index.html
0.14.1/oaipmh/: index.html
0.14.1/search/: search_index.json
0.14.1/tutorial/: index.html
0.14.2/: 404.html  index.html  sitemap.xml
0.14.2/api/client/: index.html
0.14.2/api/exceptions/: index.html
0.14.2/api/iterator/: index.html
0.14.2/api/models/: index.html
0.14.2/api/response/: index.html
0.14.2/api/utils/: index.html
0.14.2/changelog/: index.html
0.14.2/contributing/: index.html
0.14.2/customizing/: index.html
0.14.2/license/: index.html
0.14.2/oaipmh/: index.html
0.14.2/search/: search_index.json
0.14.2/tutorial/: index.html
docs/: mkdocs.yml
docs/src/: customizing.md  oaipmh.md  tutorial.md
docs/src/css/: code_select.css
requirements/: ci  docs
src/oaipmh_scythe/: __init__.py  app.py  client.py  models.py  utils.py
src/oaipmh_scythe/models/marcxml/: __init__.py  models.py
src/oaipmh_scythe/models/oai_datacite/: .xsdata.xml  README.md  __init__.py  models.py
templates/: .release_notes.md.j2  CHANGELOG.md.j2
tests/: conftest.py
tests/cassettes/: get_record.yaml  get_record_application_xml.yaml  id_does_not_exist.yaml  identify.yaml  list_identifiers.yaml  list_metadata_formats.yaml  list_records.yaml  list_sets.yaml
tests/integration/: test_get_record.py  test_identify.py  test_list_identifiers.py  test_list_metadata_formats.py  test_list_records.py  test_list_sets.py
tests/unit/: test_client.py  test_iterator.py  test_models.py  test_response.py  test_utils.py
