[build-system]  # Ref: https://docs.astral.sh/uv/concepts/build-backend
build-backend = "uv_build"
requires = [ "uv-build" ]

[project]
name = "oaipmh-scythe"
version = "0.14.2"
description = "A Scythe for harvesting OAI-PMH repositories."
readme = "README.md"
keywords = [
  "metadata",
  "oai-pmh",
  "oai-pmh-client",
]
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
authors = [
  { name = "Heinz-Alexander Fütterer" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Text Processing :: Markup :: XML",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "lxml>=5.3",
]
urls.Changelog = "https://github.com/afuetterer/oaipmh-scythe/blob/main/CHANGELOG.md"
urls.Documentation = "https://afuetterer.github.io/oaipmh-scythe"
urls.Issues = "https://github.com/afuetterer/oaipmh-scythe/issues"
urls.Repository = "https://github.com/afuetterer/oaipmh-scythe.git"

[dependency-groups]
dev = [
  "prek",
]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mock",
  "pytest-randomly",
  "pytest-recording",
  "pytest-xdist",
  "respx",
]
docs = [
  "mike",
  "mkdocs",
  "mkdocs-include-markdown-plugin",
  "mkdocs-material",
  "mkdocs-minify-plugin",
  "mkdocstrings[python]",
]

[tool.uv]
default-groups = [ "dev", "test" ]

[tool.ruff]  # Ref: https://docs.astral.sh/ruff/configuration/
line-length = 120
src = [ "src", "tests" ]
# Ref: https://docs.astral.sh/ruff/settings/#format
format.docstring-code-format = true
# Ref: https://docs.astral.sh/ruff/rules/
lint.extend-select = [
  "A",    # flake8-builtins
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "D",    # pydocstyle
  "G",    # flake8-logging-format
  "I",    # isort
  "PERF", # perflint-perf
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "TCH",  # flake8-type-checking
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
lint.ignore = [
  "D105", # undocumented-magic-method
  "D107", # undocumented-public-init
]
lint.per-file-ignores."src/oaipmh_scythe/client.py" = [
  "PLR0913", # too-many-arguments
]
lint.per-file-ignores."tests/**.py" = [
  "D",       # pydocstyle
  "PLR2004", # magic-value-comparison
]
lint.unfixable = [
  "F401", # unused-import
]
lint.isort.known-first-party = [ "oaipmh_scythe" ]
lint.pydocstyle.convention = "google"

[tool.repo-review]  # Ref: https://github.com/scientific-python/cookie/tree/main#list-of-checks
ignore = [
  # Pre-commit
  "PC111", # blacken-docs
  "PC160", # codespell
  "PC170", # pygrep hooks
  "PC180", # prettier
  "PC902", # we do not use autofixing of pull requests
  "PY007", # supports an easy task runner - we use "just"
  "MY",    # mypy
  "RTD",   # read the docs
]

[tool.typos]  # Ref: https://github.com/crate-ci/typos/blob/master/docs/reference.md
# add "spellchecker:disable-line" to ignore specific lines
default.extend-ignore-re = [ "(?Rm)^.*# spellchecker:disable-line$" ]

[tool.mypy]  # Ref: https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
python_version = "3.10"
warn_unreachable = true
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
show_error_context = true
show_column_numbers = true
pretty = true

[tool.pytest]  # Ref: https://docs.pytest.org/en/stable/customize.html
addopts = [ "-ra", "--showlocals", "--strict-config", "--strict-markers" ]
filterwarnings = [ "error" ]
log_level = "INFO"
minversion = "9.0"
testpaths = [ "tests" ]
xfail_strict = true

[tool.coverage]  # Ref: https://coverage.readthedocs.io/en/latest/config.html
run.branch = true
run.parallel = true
run.source = [ "oaipmh_scythe" ]
report.exclude_also = [
  "@abstractmethod",
  "if TYPE_CHECKING:",
]
report.fail_under = 90
report.show_missing = true
report.skip_covered = true
report.skip_empty = true

[tool.semantic_release]  # Ref: https://python-semantic-release.readthedocs.io/en/latest/configuration/configuration.html#semantic-release-settings
tag_format = "{version}"
major_on_zero = false
allow_zero_version = true
version_toml = [
  "pyproject.toml:project.version",
]
build_command = '''sed -i "s/^version: .*/version: $NEW_VERSION/" CITATION.cff
sed -i "s/^date-released: .*/date-released: $(date "+%Y-%m-%d")/" CITATION.cff
git add CITATION.cff
python -m pip install uv
uv lock --upgrade-package "$PACKAGE_NAME" --exclude-newer="1 week"
git add uv.lock
uv build
'''
commit_message = "chore: release {version}\n\nAutomatically generated by python-semantic-release [skip ci]"
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
changelog.environment.keep_trailing_newline = true
changelog.template_dir = ".github/templates"

[tool.licensecheck]  # Ref: https://github.com/FHPythonUtils/LicenseCheck/#example-1-pyprojecttoml
using = "PEP631"
format = "ansi"

[tool.rumdl]  # Ref: https://github.com/rvben/rumdl?tab=readme-ov-file#configuration-in-pyprojecttoml
line-length = 120
exclude = [
  "docs/src/api/",                   # api docs
  "docs/src/changelog.md",           # only include-markdown
  "docs/src/contributing.md",        # only include-markdown
  "docs/src/index.md",               # only include-markdown
  "docs/src/license.md",             # only include-markdown
  "CHANGELOG.md",                    # automatically generated by python-semantic-release
  ".github/templates/.changelog.md", # "template" to include legacy changelog entries
]
respect-gitignore = true
global.flavor = "gfm"
per-file-flavor."docs/**/*.md" = "mkdocs"
per-file-ignores.".github/PULL_REQUEST_TEMPLATE.md" = [ "MD041" ]  # no h1 heading
per-file-ignores."docs/src/oaipmh.md" = [ "MD036" ]
